--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/matthewhenchey/SQLResume/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/matthewhenchey/SQLResume/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/matthewhenchey/SQLResume/tarball/master" class="download-button tar"><span>Download Resume.tar</span></a>
+          <a href="https://github.com/matthewhenchey/SQLResume/zipball/master" class="download-button zip"><span>Download Resume.zip</span></a>
           <a href="https://github.com/matthewhenchey/SQLResume" class="code">View Matthew Henchey&#39;s SQL Resume on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
