Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,20 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p>Greetings.</p>
+          <h3>
+<a id="welcome-to-matthew-hencheys-sql-based-resume" class="anchor" href="#welcome-to-matthew-hencheys-sql-based-resume" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Matthew Henchey’s SQL-based Resume</h3>
 
-<p>Thank you for taking the time to review my resume.</p>
+<p>As you may have guessed, I will exploit any and all opportunities to experiment with SQL. This repository contains my attempt at condensing my professional resume into a collection of tables that can be easily queried. A supplemental document is included with queries to generate relevant information.</p>
+
+<h3>
+<a id="brief-summary" class="anchor" href="#brief-summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Summary</h3>
+
+<p>I am a dedicated professional Data Conversion Specialist who has been consistently praised as a fast-learner by my co-workers and management. Over the course of my career, I’ve developed a wide skill set relating to Relational Databases, Data Analysis and Object-Oriented Programming. Overall, I have consistently demonstrated an ability to adapt as well as determination and pride in every aspect of my roles at MINDBODY, Inc.</p>
+
+<h3>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h3>
+
+<p>I invite you to review my detailed skill set as well as my <a href="https://www.linkedin.com/in/matthew-henchey-75080611a">LinkedIn Profile</a> or contact me directly via email at <a href="mailto:HencheyMatthew@Gmail.com">HencheyMatthew@Gmail.com</a>.</p>
         </article>
       </div>
     </div>
